[package]
name = "rstat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
infer = "0.19.0"
prettytable = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
tree_magic_mini = "3.1.6"
users = "0.11.0"
